--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
   },
   "permissions": ["storage", "alarms", "notifications"],
   "action": {
+    "default_icon": {
+      "16": "/images/favicon-16x16.png",
+      "48": "/images/android-chrome-512x512.png",
+      "128": "/images/android-chrome-192x192.png"
+    },
     "default_popup": "popup.html"
   }
 }
